welcome.lessons.welcome.array.has271.Has271.scala.error
has271:1: error: Missing closing brace `}' assumed here
def has271(nums:Array[Int]): Boolean = {
^